--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@vercel/node": "^4.0.0",
     "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mongoose": "^8.15.1"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
